	- Add getters edges(), nodes(), style() and type(), which return most but not all of the information
		in the input *.gv file. These are basically for use by GraphViz2::Marpa::PathUtils.
		In particular, subgraph info is still missing.
	- Add option report_forest for new() and as a mutator. Calling new(report_forest => 1) prints all the
		information provided with those 4 new getters.
	- Expand the POD for the lexer and the parse giving details on input and output stream content.
	- Move the template for the demo from html/graphviz2.marpa.index.tx to htdocs/assets/templates/graphviz/marpa/
		where it should have been all along. Patch scripts/generate.demo.pl to match.
	- Add cache control metadata to all templates.
	- Link each template to the others, and to the index page for all graph module demos.
	- Add code to GraphViz2::Marpa::Utils to extract mutator names from modules and some programs,
		and output to data/code.attributes.csv, for use by scripts/code.attributes2html.pl.
	- Incorporate code from scripts/code.attributes2html.pl into GraphViz2::Marpa::Utils.
	- Incorporate code from scripts/stt2html.pl into GraphViz2::Marpa::Utils.
	- Rename html/default.stt.html to html/stt.html.
	- Expand contents of html/code.attributes.html, html/index.html and html/stt.html.

1.05  Tue Oct 16 09:49:00 2012
	- Fix a bug in the lexer where it used to combine multiple lines in the input file by, basically, using
		join('', <IN>), which meant the last char of a line was juxtaposed with the first char of the next
		line. If the second line started with spaces, that was ok, but if it started with, say, the name of
		a node, then that name was concatenated with what could have been a node name on the end of a previous
		line. This meant 2 separate node names sometimes became one.
	- Add data/52.gv to test the solution.
	- Shift data/code.attributes.html to html/.
	- Shift data/default.stt.html to html/.
	- Add scripts/generate.demo.sh.

1.04  Tue Sep 25 13:55:00 2012